# scrudge_orm

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
scrudge_orm/backends/: __init__.py  base.py  consts.py  patched_transaction.py
scrudge_orm/backends/postgres/: __init__.py
scrudge_orm/crypto/: pydantic_custom_types.py
scrudge_orm/crypto/aes256/: cipher.py  encrypted_field.py
scrudge_orm/crypto/sha512/: encrypted_field.py
scrudge_orm/fields/: base.py  consts.py  fields.py  server_defaults.py
scrudge_orm/fields/postgres/: __init__.py  consts.py  fields.py
scrudge_orm/managers/: base.py  set_functions.py
scrudge_orm/managers/postgres/: __init__.py  manager.py  set_functions.py
scrudge_orm/models/: base.py
scrudge_orm/models/indexes/: base.py
scrudge_orm/models/postgres/: __init__.py  indexes.py  model.py
scrudge_orm/query/: aggregations.py  conditions.py  functions.py  queryset.py  queryset_paginator.py
scrudge_orm/query/tests/: test_queryset_paginator.py
scrudge_orm/serialization/: base_serializer_fields.py  base_serializers.py
scrudge_orm/testing/: fixtures.py  helpers.py  json_to_model_creator.py
scrudge_orm/utils/: async_helpers.py  context_managers.py  convert_to_model.py  datetime.py  enums.py  imports.py  inspection.py  naming.py  sqalchemy.py  typehint.py
tests/: conftest.py  db_backends.py
tests/test_scrudge_orm/: models.py
tests/test_scrudge_orm/test_models/models_data/: unittestoptionalpostgresmodel.json
tests/test_scrudge_orm/test_models/test_postgres/: test_inheritance.py
tests/test_scrudge_orm/test_models/test_postgres/test_encrypted_fields/: test_sha512_encrypted_field.py
tests/test_scrudge_orm/test_models/test_postgres/test_fields_validation/: test_float_fields.py  test_int_fields.py
tests/test_scrudge_orm/test_models/test_postgres/test_metadata/: test_unique_index.py
tests/test_scrudge_orm/test_models/test_postgres/test_models/: test_update.py
tests/test_scrudge_orm/test_models/test_postgres/test_queryset/: test_construct_query.py  test_delete.py  test_set_functions.py  test_update.py
